--- a/app/src/main/res/drawable/ic_local_florist.xml
+++ b/app/src/main/res/drawable/ic_local_florist.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@color/jardati_green"
+        android:pathData="M8.66,13.07c0.15,0.43 0.51,0.8 0.97,1.11 0.46,0.31 1.01,0.56 1.65,0.76 0.65,0.2 1.36,0.35 2.14,0.44 0.78,0.09 1.61,0.12 2.48,0.09 -0.87,0.87 -1.7,1.49 -2.48,1.86 -0.78,0.37 -1.49,0.56 -2.14,0.56 -0.65,0 -1.19,-0.25 -1.65,-0.76 -0.46,-0.51 -0.82,-1.08 -1.07,-1.71 -0.25,-0.63 -0.4,-1.29 -0.45,-1.98 -0.05,-0.69 -0.01,-1.38 0.12,-2.07 0.13,-0.69 0.34,-1.35 0.62,-1.98 0.28,-0.63 0.62,-1.21 1.02,-1.74C8.18,6.1 7.61,6.61 7.22,7.34c-0.4,0.73 -0.6,1.57 -0.6,2.52 0,0.95 0.2,1.94 0.6,2.97 0.4,1.03 0.96,2.05 1.68,3.06z"/>
+</vector>
