--- a/app/src/main/res/drawable/ic_people.xml
+++ b/app/src/main/res/drawable/ic_people.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@color/jardati_green"
+        android:pathData="M16,4c0,-1.11 0.89,-2 2,-2s2,0.89 2,2 -0.89,2 -2,2 -2,-0.89 -2,-2zM21,10.5c0,0.83 -0.67,1.5 -1.5,1.5S18,11.33 18,10.5v-3c0,-1.1 -0.9,-2 -2,-2h-2v8.48c0.31,0.17 0.65,0.32 1,0.32s0.69,-0.15 1,-0.32V16c0,0.55 0.45,1 1,1s1,-0.45 1,-1v-2.5h2zM12.5,11.5c0.83,0 1.5,-0.67 1.5,-1.5s-0.67,-1.5 -1.5,-1.5S11,9.17 11,10s0.67,1.5 1.5,1.5zM5.5,6C6.33,6 7,5.33 7,4.5S6.33,3 5.5,3S4,3.67 4,4.5S4.67,6 5.5,6zM7.5,22v-7.5H9V22h2v-7.5c0,-0.83 -0.67,-1.5 -1.5,-1.5h-3C5.67,13 5,13.67 5,14.5V22H7.5zM14,22v-4h1.5v4H17v-4.5c0,-0.83 -0.67,-1.5 -1.5,-1.5H14V22z"/>
+</vector>
