--- a/app/src/main/res/drawable/ic_plant_placeholder.xml
+++ b/app/src/main/res/drawable/ic_plant_placeholder.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#4CAF50"
+        android:pathData="M12,2C10.07,2 8.37,3.08 7.68,4.85C7.24,6.03 7.29,7.36 7.82,8.53L11,17l0,-7.17c0,-1.48 -1.05,-2.78 -2.5,-3.05C8.88,5.6 10.33,4.5 12,4.5s3.12,1.1 3.5,2.28c-1.45,0.27 -2.5,1.57 -2.5,3.05V17l3.18,-8.47c0.53,-1.17 0.58,-2.5 0.14,-3.68C15.63,3.08 13.93,2 12,2z"/>
+</vector>
