--- a/app/src/main/res/layout/activity_jardinier_detail.xml
+++ b/app/src/main/res/layout/activity_jardinier_detail.xml
@@ -1,10 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".jardinier.JardinierDetailActivity">
+    android:background="@color/jardati_green"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Bouton retour -->
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_arrow_back"
+        android:contentDescription="Retour"
+        android:padding="4dp"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:layout_gravity="start"/>
+
+    <!-- Photo du jardinier -->
+    <ImageView
+        android:id="@+id/iv_jardinier_detail_photo"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_user_placeholder"
+        android:scaleType="centerCrop"
+        android:background="@drawable/rounded_image_background" />
+
+    <!-- Nom -->
+    <TextView
+        android:id="@+id/tv_jardinier_detail_nom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Nom complet"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginTop="12dp" />
+
+    <!-- Email -->
+    <TextView
+        android:id="@+id/tv_jardinier_detail_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="email@example.com"
+        android:gravity="center"
+        android:layout_marginTop="8dp" />
+
+    <!-- Téléphone -->
+    <TextView
+        android:id="@+id/tv_jardinier_detail_telephone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="+212 600000000"
+        android:gravity="center"
+        android:layout_marginTop="4dp" />
+
+</LinearLayout>
