--- a/app/src/main/res/layout/activity_liste_plantes.xml
+++ b/app/src/main/res/layout/activity_liste_plantes.xml
@@ -1,10 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/plante_list_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.ListePlantesActivity">
+    tools:context=".admin.ListePlantesActivity"
+    android:background="@color/jardati_green"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Titre -->
+    <TextView
+        android:id="@+id/tv_title_plantes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+
+        android:text="Liste des Plantes"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp" />
+
+    <!-- RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_plantes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tv_title_plantes"
+        android:layout_above="@+id/btn_add_plante"
+        android:layout_marginTop="16dp" />
+
+    <!-- FloatingActionButton pour ajouter une plante -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_add_plante"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        android:contentDescription="Ajouter une plante"
+        android:src="@drawable/ic_add"
+        android:backgroundTint="@color/teal_700" />
+
+</RelativeLayout>
