--- a/app/src/main/res/layout/item_plante.xml
+++ b/app/src/main/res/layout/item_plante.xml
@@ -1,6 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_plante"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:elevation="4dp"
+    android:radius="12dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dp">
+
+        <ImageView
+            android:id="@+id/iv_plante_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_plant_placeholder"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/rounded_image_background" />
+
+        <TextView
+            android:id="@+id/tv_plante_nom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nom de la plante"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_toEndOf="@id/iv_plante_image"
+            android:layout_marginStart="12dp"
+            android:layout_alignTop="@id/iv_plante_image" />
+
+        <TextView
+            android:id="@+id/tv_plante_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description courte de la plante"
+            android:textSize="14sp"
+            android:layout_below="@id/tv_plante_nom"
+            android:layout_toEndOf="@id/iv_plante_image"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="4dp" />
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
